# internal/router/auth_router.go
@@ -10,5 +10,6 @@ func (r *Router) SetupAuthRoutes() {
 		router.POST("/send-email-code", r.handler.Auth().SendEmailCode)
 		router.POST("/switch-tenant", r.jwt.JWT(), r.handler.Auth().SwitchTenant)
 		router.GET("/my-access", r.jwt.JWT(), r.handler.Auth().MyAccess)
+		router.GET("/my-tenants", r.jwt.JWT(), r.handler.Auth().MyTenants)
 	}
 }
